absolute position the video to all 4 corners to fix scrollbar appearing in chrome

--- a/includes/style.css
+++ b/includes/style.css
@@ -17,6 +17,14 @@ body {
   margin: 0;
   padding: 0;
 }
+video,
+table {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
 table {
   border-collapse: collapse;
   width: 100%;
